--- a/Baha'i/Others/ROB/V2/Cover.html
+++ b/Baha'i/Others/ROB/V2/Cover.html
@@ -12,10 +12,10 @@ Vol 2
   p 92 behoof
   p 178 suspicous, calamaties
   p 317 exorts
-  p 357 sacrified
+  p 357 sacrified 
   p 444 tha
   p 454 Qur-an
-
+  
   p 220 There is no "*" in the printed version to match the footnote
   p 266 "greeting of 'Alláh'-u-'Abhá,' and without" - extra apostrophe after "'Alláh'-u-'Abhá,"
 -->
@@ -32,7 +32,7 @@ Vol 2
        <td>
 	   	   <FORM ACTION="../V1/p351-363Index.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="<" NAME=back>
-		   </FORM>
+		   </FORM>	   
 	   </td>
        <td>
 	   	   <FORM ACTION="../../../../index.html" METHOD=GET>
@@ -40,12 +40,12 @@ Vol 2
 		   </FORM>
 		   <FORM ACTION="../../../../index.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="H" NAME=home>
-		   </FORM>
+		   </FORM>		   
 	   </td>
        <td>
 	   	   <FORM ACTION="Contents.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE=">" NAME=next>
-		   </FORM>
+		   </FORM>	   
 	   </td>
 </tr>
 </table>
@@ -101,26 +101,26 @@ Vol 2
 	   &copy; ADIB TAHERZADEH 1977<br>
 	   All Rights Reserved<br>
 	   Reprinted 1986, 1988<p>
-
+	   
 	   EXTRACTS FROM THE FOLLOWING WORKS<br>
 	   REPRINTED BY PERMISSION:<p>
 	   </center></small>
 	   <blockquote>
-           By Bahá'u'lláh:
+           By Bahá'u'lláh: 
 		      <i>Epistle to the Son of the Wolf</i>, Copyright 1941, &copy; 1969 by National Spiritual Assembly of the Bahá'ís of the United States;
 			  <i>Gleanings from the Writings of Bahá'u'lláh</i>, Copyright 1939 by National Spiritual Assembly of the Bahá'ís of the United States;
 			  <i>The Kitáb-i-Íqán</i>, Copyright 1931 by National Spiritual Assembly of the Bahá'ís of the United States;
 			  <i>Prayers and Meditations by Bahá'u'lláh</i>, Copyright 1938 by National Spiritual Assembly of the Bahá'ís of the United States;
-           By 'Abdu'l-Bahá:
+           By 'Abdu'l-Bahá: 
 		      <i>Memorials of the Faithful</i>, Copyright 1971 by National Spiritual Assembly of the Bahá'ís of the United States.
-		   By Shoghi Effendi:
+		   By Shoghi Effendi: 
 		      <i>The Advent of Divine Justice</i>, Copyright 1939, &copy; 1967 by National Spiritual Assembly of the Bahá'ís of the United State;
 			  <i>The World Order of Bahá'u'lláh: Selected Letters</i>, Copyright 1938, &copy; 1972, 1974 by National Spiritual Assembly of the Bahá'ís of the United States.
 			  <i>God Passes By</i>, Copyright 1944, &copy; 1972, 1974 by National Spiritual Assembly of the Bahá'ís of the United States;
 			  <i>The Promised Day Is Come</i>, Copyright 1941, &copy; 1969 by National Spiritual Assembly of the Bahá'ís of the United States;
-		   Miscellaneous:
+		   Miscellaneous:			  
 			  <i>The Dawn-Breakers: Nabíl's Narrative of the Early Days of the Bahá'í Revelation</i>, published 1932 by National Spiritual Assembly of the Bahá'ís of the United States.
-			  <i>The Bahá'í World: A Biennial International Record: 1938-1940</i>, Copyright 1942 by National Spiritual Assembly of the Bahá'ís of the United States and Canada.
+			  <i>The Bahá'í World: A Biennial International Record: 1938-1940</i>, Copyright 1942 by National Spiritual Assembly of the Bahá'ís of the United States and Canada.		   
 	   </blockquote>
 	   <br><br><br>
 	   <small><center>
@@ -136,13 +136,13 @@ Vol 2
 </tr>
 
    <tr>
-       <td valign="top">
-	   <H1 ALIGN=center><a name="cover5"></a>
+       <td valign="top"><a name="cover5"></a>
+	   <H1 ALIGN=center>
 	   	   <img src="i/1.jpg" width="500" height="625" border="0" align="middle" ALT="THE FIRST PAGE OF THE SÚRIY-I-AMR">
 	   </H1>
 	   <small>
 	   		  <center>
-			  		  THE FIRST PAGE OF THE <i>SÚRIY-I-AMR</i><p>
+			  		  THE FIRST PAGE OF THE <a href="p152-170Ch07.html#p161"><i>SÚRIY-I-AMR</i></a><p>
 					  In Bahá'u'lláh's own hand, revealed soon after the attempt<br>
 					  on His life. His amanuensis read this Tablet aloud to Mírzá<br>
 					  Yahyá to acquaint him formally with the mission of Bahá'u'lláh
@@ -173,7 +173,7 @@ Vol 2
        <td>
 	   	   <FORM ACTION="../V1/p351-363Index.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="<" NAME=back>
-		   </FORM>
+		   </FORM>	   
 	   </td>
        <td>
 	   	   <FORM ACTION="../../../../index.html" METHOD=GET>
@@ -181,12 +181,12 @@ Vol 2
 		   </FORM>
 		   <FORM ACTION="../../../../index.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="H" NAME=home>
-		   </FORM>
+		   </FORM>		   
 	   </td>
        <td>
 	   	   <FORM ACTION="Contents.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE=">" NAME=next>
-		   </FORM>
+		   </FORM>	   
 	   </td>
 </tr>
 </table>
