--- a/Baha'i/Others/DBNN/p001-018Ch01.html
+++ b/Baha'i/Others/DBNN/p001-018Ch01.html
@@ -22,7 +22,7 @@ div.scrollable {
 <table border="1" cellspacing="2" cellpadding="5" width=100% height=100px>
   <tr>
     <td width=80%>
-    AT A time when the shining reality of the Faith of Muhammad had been obscured by the ignorance, the fanaticism, and perversity of the contending sects into which it had fallen, there appeared above the horizon of the East 1 that luminous Star of Divine guidance, Shaykh Ahmad-i-Ahsá’í. 2 He observed how those who professed the Faith of Islám had shattered its unity, sapped its force, perverted its purpose, and degraded its holy name. His soul was filled with anguish at the sight of the corruption and strife which characterised the Shí’ah sect of Islám. Inspired by the light that shone within him, 3 he arose with unerring vision, with fixed purpose, and sublime detachment to utter his protest against the betrayal of the Faith by that ignoble people. Aglow with zeal and conscious of the sublimity of his calling, he vehemently appealed not only to shí’ah Islám but to all the followers of Muhammad throughout 2 the East, to awaken from the slumber of negligence and to prepare the way for Him who must needs be made manifest in the fulness of time, whose light alone could dissipate the mists of prejudice and ignorance which had enveloped that Faith. Forsaking his home and kindred, on one of the islands of Bahrayn, to the south of the Persian Gulf, he set out, as bidden by an almighty Providence, to unravel the mysteries of those verses of Islamic Scriptures which foreshadowed the advent of a new Manifestation. He was well aware of the dangers and perils that beset his path; he fully realised the crushing responsibility of his task. There burned in his soul the conviction that no reform, however drastic, within the Faith of Islám, could achieve the regeneration of this perverse people. He knew, and was destined by the Will of God to demonstrate, that nothing short of a new and independent Revelation, as attested and foreshadowed by the sacred Scriptures of Islám, could revive the fortunes and restore the purity of that decadent Faith. 4
+    AT A time when the shining reality of the Faith of Muhammad had been obsc
 
     </td>
     <td width=50%><div class=scrollable>
@@ -35,7 +35,7 @@ div.scrollable {
 </div></td>
   </tr>
   </table>
-  
+
 </body>
 </html>
 
