--- a/Baha'i/Others/DBNN/p001-018Ch01-footnotes.html
+++ b/Baha'i/Others/DBNN/p001-018Ch01-footnotes.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
-<!-- Covenant Library: /cl/Baha'i/Others/DBNN/p001-018Ch01.html -->
+<!-- Covenant Library: /cl/Baha'i/Others/DBNN/p001-018Ch01-footnotes.html -->
 
 <!-- ISSUES LOG
 -->
@@ -7,45 +7,40 @@
 <html>
 
 <head>
-	<title>The Dawn-Breakers, Chapter 1</title>
+	<title>The Dawn-Breakers, Chapter 1 Footnotes</title>
 
 	<style>
-		div.scrollable {
-    		width: 100%;
-    		height: 100%;
-			margin: 0;
-			padding: 0;
-			overflow: auto;
+		tr.hideRowWithNoFootnotes {
+			visibility:collapse;
+			
+			/*for IE*/
+			display:none;
+		}
+		table#maintext td:nth-child(1) {
+			display:none;
+
+		}
+		table#maintext td:nth-child(3) {
+			display:none;
 		}
 	</style>
 </head>
 
 <body>
 
-<table align="CENTER" border="0" cellspacing="5" cellpadding="5" bgcolor="">
-<tr>
-       <td>
-	   	   <FORM ACTION="Introduction.html" METHOD=GET>
-		   <INPUT TYPE=submit VALUE="<" NAME=back>
-		   </FORM>	   
-	   </td>
-       <td>
-	   	   <FORM ACTION="Contents.html" METHOD=GET>
-		   <INPUT TYPE=submit VALUE="^" NAME=up>
-		   </FORM>
-		   <FORM ACTION="../../../index.html" METHOD=GET>
-		   <INPUT TYPE=submit VALUE="H" NAME=home>
-		   </FORM>
-	   </td>
-       <td>
-	   	   <FORM ACTION="p019-046Ch02.html" METHOD=GET>
-		   <INPUT TYPE=submit VALUE=">" NAME=next>
-		   </FORM>	   
-	   </td>
-</tr>
-</table>
+
+	<h1>FOOTNOTES</h1>
+	<h2>CHAPTER I</h2>
+	<h3>THE MISSION OF SHAYKH AHMAD-I-AHSÁ'Í</h3>
+
 
 <table id=maintext border="1" cellspacing="2" cellpadding="5" width=100% height=100%>
+
+<!--for IE-->
+<col style="display: none">
+<col>
+<col style="display: none">
+
 <tr>
 	<td width="77%"><a name="para1"/><a name="p1"/>
 	<center>
@@ -312,36 +307,6 @@
 	<td VALIGN=top>&nbsp;</td>
 </tr>
 
-<!--for whatever reason, Firefox seems to need an empty row at the bottom of the table to render the scrollable columns correctly-->
-<tr style='visibility:collapse'>
-    <td colspan=3><div class=scrollable></div></td>
-</tr>
-
-</table>
-
-<p><p>
-
-<table align="CENTER" border="0" cellspacing="5" cellpadding="5" bgcolor="">
-<tr>
-       <td>
-	   	   <FORM ACTION="Introduction.html" METHOD=GET>
-		   <INPUT TYPE=submit VALUE="<" NAME=back>
-		   </FORM>	   
-	   </td>
-       <td>
-	   	   <FORM ACTION="Contents.html" METHOD=GET>
-		   <INPUT TYPE=submit VALUE="^" NAME=up>
-		   </FORM>
-		   <FORM ACTION="../../../index.html" METHOD=GET>
-		   <INPUT TYPE=submit VALUE="H" NAME=home>
-		   </FORM>
-	   </td>
-       <td>
-	   	   <FORM ACTION="p019-046Ch02.html" METHOD=GET>
-		   <INPUT TYPE=submit VALUE=">" NAME=next>
-		   </FORM>	   
-	   </td>
-</tr>
 </table>
 
 </body>
