--- a/Baha'i/AB/SAQ/p001-080Part1.html
+++ b/Baha'i/AB/SAQ/p001-080Part1.html
@@ -803,6 +803,8 @@
 	<td VALIGN=top><small>
 	1. The Báb is here designated by His title Hadrat-i-'Alá, His Supreme Highness; but for the convenience of the reader we shall continue to designate Him by the name under which He is known throughout Europe--i.e., the Báb.<p>
 	2. Doctors of the religion of Islám.
+	<hr>
+	["This illustrious Soul..."] <i>The Dawn-Breakers</i> <a href="../../Others/DBNN/p500-526Ch23.html#para23">p. 514</a> footnote #18
 	</small></td>
 	<td VALIGN=top>&nbsp;</td>
 </tr>
@@ -1693,7 +1695,7 @@
 	</td>
 	<td VALIGN=top><small>
 	1. Cf. Rev. 11:11.<p>
-	2. Hájí Mullá Muhammad-Aliy-i-Barfurushi, one of the chief disciples of the Báb and one of the nineteen Letters of the Living.
+	2. <a href="../../Others/DBNN/BabsAutographTablets.html#para19">Hájí Mullá Muhammad-Aliy-i-Barfurushi</a>, one of the chief disciples of the Báb and one of the nineteen Letters of the Living.
 	</small></td>
 	<td VALIGN=top>&nbsp;</td>
 </tr>
@@ -1711,7 +1713,7 @@
 	</td>
 	<td VALIGN=top><small>
 	1. Rev. 11:12.<p>
-	2. The Báb and Jináb-i-Quddús.
+	2. The Báb and <a href="../../Others/DBNN/BabsAutographTablets.html#para19">Jináb-i-Quddús</a>.
 	</small></td>
 	<td VALIGN=top>&nbsp;</td>
 </tr>
