--- a/Baha'i/Baha/EW/p001-182.html
+++ b/Baha'i/Baha/EW/p001-182.html
@@ -2,7 +2,9 @@
 <!-- Covenant Library: \cl\Baha'i\Baha\EW\p001-182.html -->
 
 <!-- ISSUES LOG
-
+p19 - footnotes: added The Dawn-Breakers page 421 to references
+p77 - footnotes: added The Dawn-Breakers page 608 to references
+para176 - footnotes: added ROB V1 index
 -->
 
 <html>
@@ -377,7 +379,7 @@ Me. In the Tablet, addressed to His Majesty the Sháh--may God, blessed and glor
 	</td>
 	<td VALIGN=top><small>
 	<hr>
-	<i>'He Who was wholly unversed...'</i> This passage recalls the story mentioned in the <i>Kitáb-i-Aqdas</i> concerning Ja'far, 'the sifter of Wheat' [<i>The Kitáb-i-Aqdas</i>, <a href="../KA/p019-088Aqdas.html#para166">&para;166</a>], see <i>The Dawn-Breakers</i>, p. 99. (<i>The Revelation of Bahá'u'lláh</i> vol. 4, <a href="../../Others/ROB/V4/p432-440Apndx_III.html#19c">Appendix III</a>)<p>
+	<i>'He Who was wholly unversed...'</i> This passage recalls the story mentioned in the <i>Kitáb-i-Aqdas</i> concerning Ja'far, 'the sifter of Wheat' [<i>The Kitáb-i-Aqdas</i>, <a href="../KA/p019-088Aqdas.html#para166">&para;166</a>], see <i>The Dawn-Breakers</i>, <a href="../../Others/DBNN/p097-108Ch04.html#para5">p. 99</a>, <a href="../../Others/DBNN/p378-429Ch20.html#para166">p. 421</a>. (<i>The Revelation of Bahá'u'lláh</i> vol. 4, <a href="../../Others/ROB/V4/p432-440Apndx_III.html#19c">Appendix III</a>)<p>
 	<i>'whilst the acknowledged exponent...of...sciences...'</i> This refers to Shaykh Muhammad-Hasan-i-Najafí, the leading mujtahid of Persia and a great enemy of the Cause of the Báb and Bahá'u'lláh. (<i>The Revelation of Bahá'u'lláh</i> vol. 4, <a href="../../Others/ROB/V4/p432-440Apndx_III.html#19d">Appendix III</a>)
 	</small></td>
 	<td VALIGN=top>&nbsp;</td>
@@ -389,7 +391,8 @@ Me. In the Tablet, addressed to His Majesty the Sháh--may God, blessed and glor
 	<td rowspan="2" VALIGN=top><small>
 	<hr>
 	<i>'The attempt upon the life of His Majesty...to the dungeon...'</i> See <i>God Passes By</i>, pp. <a href="../../SE/GPB/p001-086FirstPeriod.html#p61">61</a>-72, and vol. 1, pp. <a href="../../Others/ROB/V1/p007-011Ch01.html">7</a>-11. (<i>The Revelation of Bahá'u'lláh</i> vol. 4, <a href="../../Others/ROB/V4/p432-440Apndx_III.html#20">Appendix III</a>)<p>
-	["We were consigned..."] <i>God Passes By</i>, <a href="../../SE/GPB/p001-086FirstPeriod.html#para108">p. 71</a>
+	["We were consigned..."] <i>God Passes By</i>, <a href="../../SE/GPB/p001-086FirstPeriod.html#para108">p. 71</a><p>
+	["We had nothing to do..."] <i>The Dawn-Breakers</i>, <a href="../../Others/DBNN/p595-650Ch26.html#para18">p. 609</a> footnote #16
 	</small></td>
 	<td VALIGN=top><small><center><DIV TITLE="Page number location is approximate">20</DIV></center></small></td>
 </tr>
@@ -431,7 +434,7 @@ Me. In the Tablet, addressed to His Majesty the Sháh--may God, blessed and glor
 	</td>
 	<td VALIGN=top><small>
 	<hr>
-	["During the days..."] <i>The Revelation of Bahá'u'lláh</i> vol. 1, <a href="../../Others/ROB/V1/p007-011Ch01.html#p10">p. 10</a>
+	["During the days..."] <i>The Revelation of Bahá'u'lláh</i> vol. 1, <a href="../../Others/ROB/V1/p007-011Ch01.html#p10">p. 10</a>; <i>The Dawn-Breakers</i>, <a href="../../Others/DBNN/p651-668Epilogue.html#para11">p. 659</a> footnote #6
 	</small></td>
 	<td VALIGN=top>&nbsp;</td>
 </tr>
@@ -1317,9 +1320,9 @@ Me. In the Tablet, addressed to His Majesty the Sháh--may God, blessed and glor
 	</td>
 	<td VALIGN=top><small>
 	<hr>
-	["O Shaykh! That which..."] <i>The Revelation of Bahá'u'lláh</i>, vol. 4, <a href="../../Others/ROB/V4/p368-390Ch24.html#p389">p. 389</a>, <a href="../../Others/ROB/V4/p391-412Ch25.html#p410">p. 410</a><p>
-	<i>'prison of the Land of Mím'</i>, a reference to Bahá'u'lláh's imprisonment in Ámul. See <i>The Dawn-Breakers</i>, pp. 368-76. (<i>The Revelation of Bahá'u'lláh</i> vol. 4, <a href="../../Others/ROB/V4/p432-440Apndx_III.html#77a">Appendix III</a>)<p>
-	<i>'Qará-Guhar'</i> and <i>'Salásil'</i>, see vol. 1, p. <a href="../../Others/ROB/V1/p007-011Ch01.html#p9">9</a>. (<i>The Revelation of Bahá'u'lláh</i> vol. 4, <a href="../../Others/ROB/V4/p432-440Apndx_III.html#77b">Appendix III</a>)
+	["O Shaykh! That which..."] <i>The Revelation of Bahá'u'lláh</i>, vol. 4, <a href="../../Others/ROB/V4/p368-390Ch24.html#p389">p. 389</a>, <a href="../../Others/ROB/V4/p391-412Ch25.html#p410">p. 410</a>; <i>The Dawn-Breakers</i>, <a href="../../Others/DBNN/p324-377Ch19.html#para77">p. 372</a> footnote #53<p>
+	<i>'prison of the Land of Mím'</i>, a reference to Bahá'u'lláh's imprisonment in Ámul. See <i>The Dawn-Breakers</i>, pp. <a href="../../Others/DBNN/p324-377Ch19.html#para72">368</a>-76. (<i>The Revelation of Bahá'u'lláh</i> vol. 4, <a href="../../Others/ROB/V4/p432-440Apndx_III.html#77a">Appendix III</a>)<p>
+	<i>'Qará-Guhar'</i> and <i>'Salásil'</i>, see vol. 1, p. <a href="../../Others/ROB/V1/p007-011Ch01.html#p9">9</a>; <i>The Dawn-Breakers</i>, <a href="../../Others/DBNN/p595-650Ch26.html#para18">p. 608</a>, <a href="../../Others/DBNN/p595-650Ch26.html#para18">p. 609</a> footnote #15. (<i>The Revelation of Bahá'u'lláh</i> vol. 4, <a href="../../Others/ROB/V4/p432-440Apndx_III.html#77b">Appendix III</a>)
 	</small></td>
 	<td VALIGN=top><small><center><DIV TITLE="Page number location is approximate">77</DIV></center></small></td>
 </tr>
@@ -1487,7 +1490,7 @@ Me. In the Tablet, addressed to His Majesty the Sháh--may God, blessed and glor
 	</td>
 	<td VALIGN=top><small>
 	<hr>
-	For the upheavals of Zanján, Nayríz and Tabarsí see The Dawn-Breakers. (<i>The Revelation of Bahá'u'lláh</i> vol. 4, <a href="../../Others/ROB/V4/p432-440Apndx_III.html#88">Appendix III</a>)<p>
+	For the upheavals of <a href="../../Others/DBNN/p527-581Ch24.html">Zanján</a>, <a href="../../Others/DBNN/p465-499Ch22.html">Nayríz</a> and <a href="../../Others/DBNN/p324-377Ch19.html">Tabars</a>í see <i>The Dawn-Breakers</i>. (<i>The Revelation of Bahá'u'lláh</i> vol. 4, <a href="../../Others/ROB/V4/p432-440Apndx_III.html#88">Appendix III</a>)<p>
 	["Land of Tá (Tihrán)..."] <i>The Revelation of Bahá'u'lláh</i> vol. 1, pp. <a href="../../Others/ROB/V1/p045-052Ch04.html#p46">46</a>-9. 
 	</small></td>
 	<td VALIGN=middle><small><center><DIV TITLE="Page number location is approximate">89</DIV></center></small></td>
@@ -1838,8 +1841,7 @@ Me. In the Tablet, addressed to His Majesty the Sháh--may God, blessed and glor
 	</td>
 	<td VALIGN=top><small>
 	<hr>
-	<i>'Shaykh-i-Ahsá'í (Shaykh Ahmad)'</i>, the founder of the Shaykhí sect. See <i>The Dawn-Breakers</i>. (<i>The Revelation of Bahá'u'lláh</i> vol. 4, <a href="../../Others/ROB/V4/p432-440Apndx_III.html#120b">Appendix III</a>)<p>
-	[Shaykh Ahmad-i-Ahsá'í] <i>The Revelation of Bahá'u'lláh</i>, <a href="../../Others/ROB/V1/p351-363Index.html#Ahmad-i-Ahsá'í,Shaykh">vol. 1</a>.
+	<i>'Shaykh-i-Ahsá'í (Shaykh Ahmad)'</i>, the founder of the Shaykhí sect. See <i>The Kitáb-i-Aqdas</i>, <a href="../KA/p165-251Notes.html#note171">Note 171</a>; <a href="../../Others/DBNN/p001-018Ch01.html"><i>The Dawn-Breakers</i></a>; <i>The Revelation of Bahá'u'lláh</i>, <a href="../../Others/ROB/V1/p351-363Index.html#Ahmad-i-Ahsá'í,Shaykh">vol. 1</a>, vol. 2 <a href="../../Others/ROB/V2/p171-193Ch08.html#p180">p. 180</a>. (<i>The Revelation of Bahá'u'lláh</i> vol. 4, <a href="../../Others/ROB/V4/p432-440Apndx_III.html#120b">Appendix III</a>)<p>
 	</small></td>
 	<td VALIGN=top>&nbsp;</td>
 </tr>
@@ -2042,6 +2044,7 @@ Say: 'Yea, by the Lord of Lords!' 'Is the Resurrection come?' 'Nay, more; He Who
 	</td>
 	<td VALIGN=top><small>
 	<hr>
+	["It was to this teacher..."] <i>The Revelation of Bahá'u'lláh</i>, vol. 4, <a href="../../Others/ROB/V4/p391-412Ch25.html#p405">p. 405</a><p>
 	['Akká] <i>The Revelation of Bahá'u'lláh</i> <a href="../../Others/ROB/V3/Cover.html">vol. 3</a>
 	</small></td>
 	<td VALIGN=middle><small><center><DIV TITLE="Page number location is approximate">135</DIV></center></small></td>
@@ -2171,7 +2174,7 @@ Say: 'Yea, by the Lord of Lords!' 'Is the Resurrection come?' 'Nay, more; He Who
 	<td VALIGN=top><small>
 	<hr>
 	Words of the Báb concerning the greatness of the Revelation of Bahá'u'lláh, see vol. 1, <a href="../../Others/ROB/V1/p294-314Ch18.html">Chapter 18</a>, and vol. 4, pp. <a href="../../Others/ROB/V4/p145-160Ch09.html#p153">153</a>-4 and 153n. (<i>The Revelation of Bahá'u'lláh</i> vol. 4, <a href="../../Others/ROB/V4/p432-440Apndx_III.html#141">Appendix III</a>)<p>
-	<i>'his honour, 'Azím'</i>, Mullá 'Alí, a well-known disciple of the Báb. See <i>The Dawn-Breakers</i>, under 'Azím' in index; <i>God Passes By</i>, <a href="../../SE/GPB/p001-086FirstPeriod.html#para47">p. 28</a>. (<i>The Revelation of Bahá'u'lláh</i> vol. 4, <a href="../../Others/ROB/V4/p432-440Apndx_III.html#142">Appendix III</a>)
+	<i>'his honour, 'Azím'</i>, Mullá 'Alí, a well-known disciple of the Báb. See <i>The Dawn-Breakers</i>, under '<a href="../../Others/DBNN/p679-685Index.html#DBNN-'Alí,Mírzá,Mulla,Shaykh(surnamed'Azim)">Azím' in index</a>; <i>God Passes By</i>, <a href="../../SE/GPB/p001-086FirstPeriod.html#para47">p. 28</a>. (<i>The Revelation of Bahá'u'lláh</i> vol. 4, <a href="../../Others/ROB/V4/p432-440Apndx_III.html#142">Appendix III</a>)
 	</small></td>
 	<td VALIGN=middle><small><center><DIV TITLE="Page number location is approximate">143</DIV></center></small></td>
 </tr>
@@ -2345,7 +2348,8 @@ Say: 'Yea, by the Lord of Lords!' 'Is the Resurrection come?' 'Nay, more; He Who
 	Passages from the Báb concerning the Revelation of Bahá'u'lláh, see vol. 1, <a href="../../Others/ROB/V1/p294-314Ch18.html">Chapter 18</a>, and vol. 2, pp. <a href="../../Others/ROB/V2/p370-387Ch17.html">370</a>-81. (<i>The Revelation of Bahá'u'lláh</i> vol. 4, <a href="../../Others/ROB/V4/p432-440Apndx_III.html#151">Appendix III</a>)<p>
 	<i>'Him Whom God shall make manifest'</i>, the Promised One of the Bayán who was to manifest Himself after the Báb, i.e. Bahá'u'lláh. See vol. 1, <a href="../../Others/ROB/V1/p294-314Ch18.html">Chapter 18</a>. (<i>The Revelation of Bahá'u'lláh</i> vol. 4, <a href="../../Others/ROB/V4/p432-440Apndx_III.html#153">Appendix III</a>)<p>
 	["Look not upon Him..."] <i>The Revelation of Bahá'u'lláh</i>, vol. 2, <a href="../../Others/ROB/V2/p370-387Ch17.html#p380">p. 380</a>.<p>
-	["Better is it for thee..."] <i>The Revelation of Bahá'u'lláh</i>, vol. 2, <a href="../../Others/ROB/V2/p370-387Ch17.html#p380">p. 380</a>.
+	["Better is it for thee..."] <i>The Revelation of Bahá'u'lláh</i>, vol. 2, <a href="../../Others/ROB/V2/p370-387Ch17.html#p380">p. 380</a>.<p>
+	[Letters of the Living] <i>The Dawn-Breakers</i>, <a href="../../Others/DBNN/BabsAutographTablets.html">Báb's Tablets Addressed To The Letters Of The Living</a> 
 	</small></td>
 	<td VALIGN=middle><small><center><DIV TITLE="Page number location is approximate">153</DIV></center></small></td>
 </tr>
@@ -2421,7 +2425,7 @@ Say: 'Yea, by the Lord of Lords!' 'Is the Resurrection come?' 'Nay, more; He Who
 	<hr>
 	Passages from the Báb concerning the Revelation of Bahá'u'lláh, see vol. 1, <a href="../../Others/ROB/V1/p294-314Ch18.html">Chapter 18</a>, and vol. 2, pp. <a href="../../Others/ROB/V2/p370-387Ch17.html">370</a>-81. (<i>The Revelation of Bahá'u'lláh</i> vol. 4, <a href="../../Others/ROB/V4/p432-440Apndx_III.html#151">Appendix III</a>)<p>
 	["None knoweth the time..."] Introduction, <a href="Introduction.html#para43">p. xvii</a><p>
-	<i>'Him Whom God shall make manifest'</i>, the Promised One of the Bayán who was to manifest Himself after the Báb, i.e. Bahá'u'lláh. See vol. 1, <a href="../../Others/ROB/V1/p294-314Ch18.html">Chapter 18</a>. (<i>The Revelation of Bahá'u'lláh</i> vol. 4, <a href="../../Others/ROB/V4/p432-440Apndx_III.html#153">Appendix III</a>)
+	<i>'Him Whom God shall make manifest'</i>, the Promised One of the Bayán who was to manifest Himself after the Báb, i.e. Bahá'u'lláh. See vol. 1, <a href="../../Others/ROB/V1/p294-314Ch18.html">Chapter 18</a>. (<i>The Revelation of Bahá'u'lláh</i> vol. 4, <a href="../../Others/ROB/V4/p432-440Apndx_III.html#153">Appendix III</a>)	
 	</small></td>
 	<td VALIGN=top><small><center><DIV TITLE="Page number location is approximate">158</DIV></center></small></td>
 </tr>
@@ -2578,6 +2582,7 @@ Say: 'Yea, by the Lord of Lords!' 'Is the Resurrection come?' 'Nay, more; He Who
 	<td VALIGN=top><small>
 	<hr>
 	<i>'The authorship of the Kitáb-i-Íqán...'</i> The followers of Mírzá Yahyá had shamefully circulated the rumour that the author of this Book was Mírzá Yahyá. See vol. 2, pp. <a href="../../Others/ROB/V2/p065-106Ch04.html#p66">66</a>-70. (<i>The Revelation of Bahá'u'lláh</i> vol. 4, <a href="../../Others/ROB/V4/p432-440Apndx_III.html#168">Appendix III</a>)<p>
+	["I adjure thee..."] <i>The Dawn-Breakers</i>, <a href="../../Others/DBNN/p430-464Ch21.html#para9">p. 433</a> footnote #10<p>
 	<a href="../KI/Cover.html">The Kitáb-i-Íqán</a>
 	</small></td>
 	<td VALIGN=bottom><small><center><DIV TITLE="Page number location is approximate">169</DIV></center></small></td>
@@ -2626,8 +2631,8 @@ Say: 'Yea, by the Lord of Lords!' 'Is the Resurrection come?' 'Nay, more; He Who
 	<td VALIGN=top><small>
 	<hr>
 	<i>'Hádí'</i>, Hádíy-i-Dawlat-Ábádí, who had publicly recanted his faith in the Báb, yet was installed as the successor to Mírzá Yahyá. See vol. 4, pp. <a href="../../Others/ROB/V4/p168-176Ch11.html#p174">174</a>-6. (<i>The Revelation of Bahá'u'lláh</i> vol. 4, <a href="../../Others/ROB/V4/p432-440Apndx_III.html#163">Appendix III</a>)<p>
-	<i>'Siyyid Husayn'</i>, a native of Yazd, one of the Letters of the Living who was a companion of the Báb in Máh-Kú and Chihríq and served Him as His amanuensis till His martyrdom. See <i>The Dawn-Breakers</i>, under 'Husayn-i-Yazdí, Siyyid', in the index. (<i>The Revelation of Bahá'u'lláh</i> vol. 4, <a href="../../Others/ROB/V4/p432-440Apndx_III.html#173a">Appendix III</a>)<p>
-	<i>'Mírzá Ahmad'</i>, a reference to Mullá 'Abdu'l Karím-i-Qazvíní, a trusted disciple of the Báb. See <i>The Dawn-Breakers</i>, pp. 504-5, <i>God Passes By</i>, <a href="../../SE/GPB/p001-086FirstPeriod.html#para79">p. 51</a>, and vol. 1, pp. <a href="../../Others/ROB/V1/p053-070Ch05.html">53</a>-4. (<i>The Revelation of Bahá'u'lláh</i> vol. 4, <a href="../../Others/ROB/V4/p432-440Apndx_III.html#173b">Appendix III</a>)
+	<i>'Siyyid Husayn'</i>, a native of Yazd, one of the Letters of the Living who was a companion of the Báb in Máh-Kú and Chihríq and served Him as His amanuensis till His martyrdom. See <i>The Dawn-Breakers</i>, under <a href="../../Others/DBNN/p679-685Index.html#DBNN-Husayn-i-Yazdí,Siyyid(theBáb'samanuensis)">'Husayn-i-Yazdí, Siyyid', in the index</a>. (<i>The Revelation of Bahá'u'lláh</i> vol. 4, <a href="../../Others/ROB/V4/p432-440Apndx_III.html#173a">Appendix III</a>)<p>
+	<i>'Mírzá Ahmad'</i>, a reference to Mullá 'Abdu'l-Karím-i-Qazvíní, a trusted disciple of the Báb. See <i>The Dawn-Breakers</i>, pp. <a href="../../Others/DBNN/p500-526Ch23.html#para6">504</a>-5, <i>God Passes By</i>, <a href="../../SE/GPB/p001-086FirstPeriod.html#para79">p. 51</a>, and vol. 1, pp. <a href="../../Others/ROB/V1/p053-070Ch05.html">53</a>-4. (<i>The Revelation of Bahá'u'lláh</i> vol. 4, <a href="../../Others/ROB/V4/p432-440Apndx_III.html#173b">Appendix III</a>)
 	</small></td>
 	<td VALIGN=middle><small><center><DIV TITLE="Page number location is approximate">173</DIV></center></small></td>
 </tr>
@@ -2657,7 +2662,8 @@ Say: 'Yea, by the Lord of Lords!' 'Is the Resurrection come?' 'Nay, more; He Who
 	</td>
 	<td VALIGN=top><small>
 	<hr>
-	<i>'Mullá Báqir'</i>, a native of Tabríz and a Letter of the Living. See vol. 2, pp. <a href="../../Others/ROB/V2/p137-151Ch06.html#p146">146</a>-7. (<i>The Revelation of Bahá'u'lláh</i> vol. 4, <a href="../../Others/ROB/V4/p432-440Apndx_III.html#174a">Appendix III</a>)
+	<i>'Mullá Báqir'</i>, a native of Tabríz and a Letter of the Living. See vol. 2, pp. <a href="../../Others/ROB/V2/p137-151Ch06.html#p146">146</a>-7. (<i>The Revelation of Bahá'u'lláh</i> vol. 4, <a href="../../Others/ROB/V4/p432-440Apndx_III.html#174a">Appendix III</a>)<p>
+	<i>The Dawn-Breakers</i>, <a href="../../Others/DBNN/p243-260Ch13.html#para9">p. 248</a> footnote #8
 	</small></td>
 	<td VALIGN=top>&nbsp;</td>
 </tr>
@@ -2875,7 +2881,7 @@ Say: 'Yea, by the Lord of Lords!' 'Is the Resurrection come?' 'Nay, more; He Who
        <td>
 	   	   <FORM ACTION="Introduction.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="<" NAME=back>
-		   </FORM>
+		   </FORM>	   
 	   </td>
        <td>
 	   	   <FORM ACTION="Cover.html" METHOD=GET>
@@ -2888,7 +2894,7 @@ Say: 'Yea, by the Lord of Lords!' 'Is the Resurrection come?' 'Nay, more; He Who
        <td>
 	   	   <FORM ACTION="p183-194Glossary.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE=">" NAME=next>
-		   </FORM>
+		   </FORM>	   
 	   </td>
 </tr>
 </table>
