--- a/Baha'i/Baha/EW/p183-194Glossary.html
+++ b/Baha'i/Baha/EW/p183-194Glossary.html
@@ -2,7 +2,8 @@
 <!-- Covenant Library: \cl\Baha'i\Baha\EW\p183-194Glossary.html -->
 
 <!-- ISSUES LOG
-SIYYID ASHRAF-I-ZANJÁNÍ - Nazir change to Básir
+Dawnbreakers changed to The Dawn-Breakers
+SIYYID ASHRAF-I-ZANJÁNÍ - Nazir changed to Básir
 -->
 
 <html>
@@ -212,7 +213,7 @@ SIYYID ASHRAF-I-ZANJÁNÍ - Nazir change to Básir
 </tr>
 <tr>
        <td><b>DAYYÁN</b>
-	   <blockquote>Title given by the Báb to Asadu'lláh of Khoy, a devoted and distinguished believer. Was the third to recognize Bahá'u'lláh's true station before His Declaration. Murdered in Baghdád by the followers of Mírzá Yahyá. (See Dawnbreakers p. 303.)</blockquote></td>
+	   <blockquote>Title given by the Báb to Asadu'lláh of Khoy, a devoted and distinguished believer. Was the third to recognize Bahá'u'lláh's true station before His Declaration. Murdered in Baghdád by the followers of Mírzá Yahyá. (See <i>The Dawn-Breakers</i>, <a href="../../Others/DBNN/p301-308Ch17.html#para7">p. 303</a>.)</blockquote></td>
        <td>&nbsp;</td>
        <td VALIGN=top><small><center>&nbsp;</center><p></small></td>
 </tr>
