--- a/Baha'i/Baha/GL/GlossaryAndNotes.html
+++ b/Baha'i/Baha/GL/GlossaryAndNotes.html
@@ -17,7 +17,7 @@
        <td>
 	   	   <FORM ACTION="p003-346.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="<" NAME=back>
-		   </FORM>
+		   </FORM>	   
 	   </td>
        <td>
 	   	   <FORM ACTION="Cover.html" METHOD=GET>
@@ -30,7 +30,7 @@
        <td>
 	   	   <FORM ACTION="Index.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE=">" NAME=next>
-		   </FORM>
+		   </FORM>	   
 	   </td>
 </tr>
 </table>
@@ -103,7 +103,7 @@
 <tr>
 	<td><a name="para8"></a>
 	<b>'Akká:</b>
-	<blockquote>The prison city in Palestine where Bahá'u'lláh was finally exiled. He arrived there on August 31, 1868.</blockquote>
+	<blockquote>The prison city in Palestine where Bahá'u'lláh was finally exiled. He arrived there on August 31, 1868.</blockquote>	
 	</td>
 	<td VALIGN=top><small>
 	&nbsp;
@@ -113,7 +113,7 @@
 <tr>
 	<td><a name="para9"></a>
 	<b>'Alí:</b>
-	<blockquote>The first Imám; cousin and first disciple of Muhammad and married to His daughter Fátimih.</blockquote>
+	<blockquote>The first Imám; cousin and first disciple of Muhammad and married to His daughter Fátimih.</blockquote>	
 	</td>
 	<td VALIGN=top><small>
 	&nbsp;
@@ -273,7 +273,7 @@
 <tr>
 	<td><a name="para25"></a>
 	<b>Dhabíh:</b>
-	<blockquote>Ishmael, famous Bahá'í and brother of Mírzá Jání of Káshán (see <i>The Dawn-Breakers</i>). Given this title (sacrifice) by Bahá'u'lláh.</blockquote>
+	<blockquote>Ishmael, famous Bahá'í and brother of Mírzá Jání of Káshán (see <a href="../../Others/DBNN/p142-169Ch08.html#para39"><i>The Dawn-Breakers</i></a>). Given this title (sacrifice) by Bahá'u'lláh.</blockquote>
 	</td>
 	<td VALIGN=top><small>
 	&nbsp;
@@ -503,7 +503,7 @@
 <tr>
 	<td><a name="para48"></a>
 	<b>Nabíl-i-A'zam:</b>
-	<blockquote>The Bahá'í title of Muhammad-i-Zarandí, a devoted follower of the Báb and Bahá'u'lláh, author of the historical work known as "Nabíl's Narrative."</blockquote>
+	<blockquote>The Bahá'í title of Muhammad-i-Zarandí, a devoted follower of the Báb and Bahá'u'lláh, author of the historical work known as "<a href="../../Others/DBNN/Cover.html">Nabíl's Narrative</a>."</blockquote>
 	</td>
 	<td VALIGN=top><small>
 	&nbsp;
@@ -817,7 +817,7 @@
        <td>
 	   	   <FORM ACTION="p003-346.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE="<" NAME=back>
-		   </FORM>
+		   </FORM>	   
 	   </td>
        <td>
 	   	   <FORM ACTION="Cover.html" METHOD=GET>
@@ -830,7 +830,7 @@
        <td>
 	   	   <FORM ACTION="Index.html" METHOD=GET>
 		   <INPUT TYPE=submit VALUE=">" NAME=next>
-		   </FORM>
+		   </FORM>	   
 	   </td>
 </tr>
 </table>
